fixed hero overlapping with section 1

--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -59,7 +59,8 @@ a {
   background-color: $darkBlue;
   margin-right: 4.8125rem;
   margin-left: 4.8125rem;
-  margin-top: 4.375rem;
+ // margin-top: 4.375rem;
+ margin-top: 2rem;
   @include breakpoint-down('medium'){
     margin-right: 1.5rem;
     margin-right: 1.5rem;
